k8s/flux/clusters/tal-clu-1/infra/observe/kubernetes-dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: kubernetes-dashboard
spec:
  entryPoints: ["web"]
  routes:
  - match: Host(`k8s-dashboard.homelab.emerconnelly.com`) || Host(`kubernetes-dashboard.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: kubernetes-dashboard
spec:
  entryPoints: ["websecure"]
  routes:
  - match: Host(`k8s-dashboard.homelab.emerconnelly.com`) || Host(`kubernetes-dashboard.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: kubernetes-dashboard-kong-proxy
      port: 80
      passHostHeader: true
  tls:
    secretName: ingress-tls
